<?xml version="1.0"?>
<package>
  <name>mls</name>
  <version>0.0.0</version>
  <description>mls</description>
  <maintainer email="adas@uwaterloo.ca">adas</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>ground_segmentation</build_depend>
  <build_depend>grid_map</build_depend>
  <build_depend>grid_map_ros</build_depend>
  <build_depend>grid_map_cv</build_depend>
  <build_depend>grid_map_loader</build_depend>
  <build_depend>grid_map_msgs</build_depend>
  <build_depend>grid_map_visualization</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>ground_segmentation</run_depend>
  <run_depend>grid_map</run_depend>
  <run_depend>grid_map_ros</run_depend>
  <run_depend>grid_map_cv</run_depend>
  <run_depend>grid_map_loader</run_depend>
  <run_depend>grid_map_msgs</run_depend>
  <run_depend>grid_map_visualization</run_depend>


  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
  </export>
</package>
